backend/media/Outputiles/c500484cced14f5fa67cb6ac02b7d1d1_compile_output.txt
c500484cced14f5fa67cb6ac02b7d1d1.cpp: In function ‘int main()’:
c500484cced14f5fa67cb6ac02b7d1d1.cpp:10:5: error: ‘vecotr’ was not declared in this scope
   10 |     vecotr<int> v(n);
      |     ^~~~~~
c500484cced14f5fa67cb6ac02b7d1d1.cpp:10:12: error: expected primary-expression before ‘int’
   10 |     vecotr<int> v(n);
      |            ^~~
c500484cced14f5fa67cb6ac02b7d1d1.cpp:11:31: error: ‘v’ was not declared in this scope
   11 |     for(int i=0;i<n;i++) cin>>v[i];
      |                               ^
c500484cced14f5fa67cb6ac02b7d1d1.cpp:12:22: error: ‘v’ was not declared in this scope
   12 |     cout<<accumulate(v.begin(),v.end(),0);
      |                      ^
